dark mode fix

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -21,19 +21,19 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --app-bg-color: var(--tg-theme-bg-color-dark, #121212);
-    --app-secondary-bg-color: var(--tg-theme-secondary-bg-color-dark, #1E1E1E);
-    --app-text-color: var(--tg-theme-text-color-dark, #E0E0E0);
-    --app-hint-color: var(--tg-theme-hint-color-dark, #B8B8B8);
-    --app-link-color: var(--tg-theme-link-color-dark, #88AACC);
-    --app-subtitle-text-color: var(--tg-theme-subtitle-text-color-dark, #CBCBCB);
-    --app-button-color: var(--tg-theme-button-color-dark, #2A2A2A);
-    --app-button-text-color: var(--tg-theme-button-text-color-dark, #E0E0E0);
-    --app-header-bg-color: var(--tg-theme-header-bg-color-dark, #1C1C1C);
-    --app-accent-text-color: var(--tg-theme-accent-text-color-dark, #FFA040);
-    --app-section-bg-color: var(--tg-theme-section-bg-color-dark, #2D2D2D);
-    --app-section-header-text-color: var(--tg-theme-section-header-text-color-dark, #F0F0F0);
-    --app-destructive-text-color: var(--tg-theme-destructive-text-color-dark, #FF6767);
+    --app-bg-color: var(--tg-theme-bg-color, #121212);
+    --app-secondary-bg-color: var(--tg-theme-secondary-bg-color, #1E1E1E);
+    --app-text-color: var(--tg-theme-text-color, #E0E0E0);
+    --app-hint-color: var(--tg-theme-hint-color, #B8B8B8);
+    --app-link-color: var(--tg-theme-link-color, #88AACC);
+    --app-subtitle-text-color: var(--tg-theme-subtitle-text-color, #CBCBCB);
+    --app-button-color: var(--tg-theme-button-color, #2A2A2A);
+    --app-button-text-color: var(--tg-theme-button-text-color, #E0E0E0);
+    --app-header-bg-color: var(--tg-theme-header-bg-color, #1C1C1C);
+    --app-accent-text-color: var(--tg-theme-accent-text-color, #FFA040);
+    --app-section-bg-color: var(--tg-theme-section-bg-color, #2D2D2D);
+    --app-section-header-text-color: var(--tg-theme-section-header-text-color, #F0F0F0);
+    --app-destructive-text-color: var(--tg-theme-destructive-text-color, #FF6767);
   }
 }
 
